@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Sat Mar  4 21:07:30 2006
+# Generated on Sun Mar 26 19:26:00 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -164,6 +164,7 @@ class Gpodder(SimpleGladeApp):
                         gtk.gdk.ACTION_DEFAULT | gtk.gdk.ACTION_COPY | \
                         gtk.gdk.ACTION_DEFAULT)
         self.main_widget.connect("drag_data_received", self.drag_data_received)
+        self.wNotebook.connect("switch-page", self.switched_notebook)
     #-- Gpodder.new }
 
     #-- Gpodder custom methods {
@@ -228,6 +229,21 @@ class Gpodder(SimpleGladeApp):
                 pb = gtk.gdk.Pixbuf(gtk.gdk.COLORSPACE_RGB, True, 8, size, size)
                 pb.fill(0x00000000)
         return pb
+
+    def switched_notebook( self, notebook, page, page_num):
+        # if we are NOT on the "available downloads" page, disable menu items
+        if page_num != 0:
+            is_available = False
+        else:
+            is_available = True
+        
+        # disable/enable menu items related to only the first notebook tab
+        self.itemRemoveChannel.set_sensitive( is_available)
+        self.itemEditChannel.set_sensitive( is_available)
+
+        # when switching to last page, update the "downloaded" combo box
+        if page_num == 2:
+            self.updateDownloadedComboBox()
 
     def drag_data_received(self, widget, context, x, y, sel, ttype, time):
         #TODO following code is copied from on_itemAddChannel_activate refactor both to new method
@@ -419,8 +435,6 @@ class Gpodder(SimpleGladeApp):
     def on_wNotebook_switch_page(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_wNotebook_switch_page called with self.%s" % widget.get_name()
-        # TODO: only update when switching to last page (the "downloaded" page)
-        self.updateDownloadedComboBox()
     #-- Gpodder.on_wNotebook_switch_page }
 
     #-- Gpodder.on_comboAvailable_changed {
@@ -531,7 +545,7 @@ class Gpodder(SimpleGladeApp):
         # Note: same code as in on_treeDownloaded_row_activated()
         selection_iter = self.comboDownloaded.get_active_iter()
         channel_filename = self.comboDownloaded.get_model().get_value( selection_iter, 0)
-        
+
         selection_tuple = self.treeDownloaded.get_selection().get_selected()
         selection_iter = selection_tuple[1]
         url = self.treeDownloaded.get_model().get_value( selection_iter, 0)
@@ -539,7 +553,7 @@ class Gpodder(SimpleGladeApp):
         filename_final = localDB().getLocalFilenameByPodcastURL( channel_filename, url)
 
         current_channel = self.downloaded_channels[self.comboDownloaded.get_active()]
-	if current_channel.deleteDownloadedItemByUrlAndTitle(url, title):
+        if current_channel.deleteDownloadedItemByUrlAndTitle( url, title):
             gPodderLib().deleteFilename( filename_final)
             self.updateComboBox()
             self.updateDownloadedComboBox()
