@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Sat Mar  4 21:07:30 2006
+# Generated on Sun Mar 26 19:26:00 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -130,6 +130,11 @@ class Gpodder(SimpleGladeApp):
     def on_btnDownloadedExecute_clicked(self, widget, *args):
         print "on_btnDownloadedExecute_clicked called with self.%s" % widget.get_name()
     #-- Gpodder.on_btnDownloadedExecute_clicked }
+
+    #-- Gpodder.on_btnDownloadedDelete_clicked {
+    def on_btnDownloadedDelete_clicked(self, widget, *args):
+        print "on_btnDownloadedDelete_clicked called with self.%s" % widget.get_name()
+    #-- Gpodder.on_btnDownloadedDelete_clicked }
 
 
 class Gpodderstatus(SimpleGladeApp):
