@@ -1,3 +1,7 @@
+Tue, 28 Mar 2006 20:30:00 +0200 <thp@perli.net>
+	* Disable some menu items when not on "available" tab
+	* Reload the localDB only when changing to "downloaded" tab
+
 Fri, 24 Mar 2006 19:34:21 +0100 <thp@perli.net>
 	+ Applied yet another patch from Alain (delete downloaded podcasts)
 	* Delete empty local db index.xml files when no items left
